Fixed issue with scroll overrun on mobile Chrome

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@ $colour-dark: #000;
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 %circle {
@@ -64,8 +65,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
